Changes to be able to build on Eclipse 3.5